--- a/app/templates/inc/footer.html
+++ b/app/templates/inc/footer.html
@@ -1,27 +1,63 @@
-<footer class="footer">
-   <div class="container">
-      <div class="row">
-        <!--
-        <div class="col-md-3">
-          <ul class="list-unstyled">
-            <li><a href="#">Enlace 1</a></li>
-            <li><a href="#">Enlace 2</a></li>
-            <li><a href="#">Enlace 3</a></li>
-          </ul>
-        </div>
-        -->
-        <div class="col-md-12 text-center">
-          &copy; 2024 Nombre de la Empresa
-        </div>
-        <!--
-        <div class="col-md-3">
-          <ul class="list-unstyled">
-            <li><a href="#">Enlace 4</a></li>
-            <li><a href="#">Enlace 5</a></li>
-            <li><a href="#">Enlace 6</a></li>
-          </ul>
-        </div>
-        -->
+<!-- Footer -->
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 footer-column">
+        <h6>Why SE Ranking</h6>
+        <a href="#">for Agencies</a>
+        <a href="#">for Enterprises</a>
+        <a href="#">for SMBs</a>
+        <a href="#">for Entrepreneurs</a>
+        <a href="#">Case Studies</a>
+        <a href="#">Testimonials</a>
+        <a href="#">Our Data</a>
+        <a href="#">About us</a>
+        <a href="#">Careers</a>
+        <a href="#">For Media</a>
+        <a href="#">Affiliate</a>
       </div>
-   </div>
-  </footer>
+      <div class="col-md-3 footer-column">
+        <h6>Features</h6>
+        <a href="#">Rank Tracker</a>
+        <a href="#">On-Page SEO Checker</a>
+        <a href="#">Website Audit</a>
+        <a href="#">Competitor Analysis Tool <span class="update">Update</span></a>
+        <a href="#">Backlink Checker <span class="update">Update</span></a>
+        <a href="#">Local Marketing Tool</a>
+        <a href="#">Insights <span class="new">New</span></a>
+        <a href="#">Keyword Suggestion Tool</a>
+        <a href="#">Keyword Grouper</a>
+        <a href="#">Content Marketing Tool</a>
+        <a href="#">Content Editor</a>
+        <a href="#">AI Writer</a>
+      </div>
+      <div class="col-md-3 footer-column">
+        <h6>Other SEO Tools</h6>
+        <a href="#">Backlink Tracking Tool</a>
+        <a href="#">SERP Tracker</a>
+        <a href="#">Agency Pack</a>
+        <a href="#">SEO Report Generator</a>
+        <a href="#">Lead Generator</a>
+        <a href="#">API</a>
+        <a href="#">White Label SEO Software</a>
+      </div>
+      <div class="col-md-3 footer-column">
+        <h6>Resources</h6>
+        <a href="#">Blog</a>
+        <a href="#">Thorough SEO guides, client case studies, and more</a>
+        <a href="#">Webinars</a>
+        <a href="#">On-demand and upcoming online events with industry experts</a>
+        <a href="#">Academy</a>
+        <a href="#">Practical online courses for SEO experts and agency owners</a>
+        <a href="#">Agency Hub <span class="new">New</span></a>
+        <a href="#">Ultimate Guide to Navigating for Agency Success</a>
+        <a href="#">Agency Catalog</a>
+        <a href="#">Handpicked list of leading SEO agencies worldwide</a>
+        <a href="#">How to pick an SEO agency</a>
+        <a href="#">Tips for finding the right agency for you</a>
+        <a href="#">What’s new?</a>
+        <a href="#">Latest product updates from the SE Ranking team</a>
+      </div>
+    </div>
+  </div>
+</footer>
