--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -6,11 +6,11 @@
 <!-- Top Bar -->
 <div class="top-bar d-flex justify-content-between px-3 bg-light">
   <div class="d-flex">
-   <!-- <a href="#" class="text-white me-3">Cita Comercial</a>
+    <!-- <a href="#" class="text-white me-3">Cita Comercial</a>
    -->
-      <a href="#" class="text-white me-3">📢 Anunciarse</a>
+    <a href="#" class="text-white me-3">📢 Anunciarse</a>
 
-    </div>
+  </div>
   <div class="d-flex">
     <a href="#" class="text-white me-3">🗞️ Comunicados</a>
     <a href="#" class="text-white">💬 Atención al cliente</a>
@@ -39,47 +39,54 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="aboutUsDropdown">
             <div class="dropdown-menu-columns">
-                <div class="column">
-                    <h6 class="dropdown-header">Conoce Monitor</h6>
-                    <a class="dropdown-item" href="#"><i class="fas fa-bullhorn"></i> Anuncios</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-history"></i> Historia</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-briefcase"></i> Casos Reales</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-handshake"></i> Partners</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-life-ring"></i> Soporte</a>
-                </div>
-                <div class="column">
-                    <h6 class="dropdown-header">Planes y Precios 💵</h6>
-                    <a class="dropdown-item" href="#"><i class="fas fa-user-graduate"></i> Plan Estudiante</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-briefcase"></i> Plan Profesional</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-building"></i> Plan Agencia</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-suitcase"></i> Plan Corporate</a>
-    
-                    <h6 class="dropdown-header">Clientes 👥</h6>
-                    <a class="dropdown-item" href="#"><i class="fas fa-user-graduate"></i> Estudiantes</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-user-tie"></i> Profesionales / PYMES</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-handshake"></i> Agencias</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-building"></i> Corporativos</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-university"></i> Admon. Pública</a>
-                </div>
-                <div class="column">
-                    <h6 class="dropdown-header">Recursos 📚</h6>
-                    <a class="dropdown-item" href="#"><i class="fas fa-blog"></i> Blog</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-book-open"></i> Guías</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-book"></i> Nomenclatura</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-info-circle"></i> Centro de Ayuda</a>
-    
-                    <h6 class="dropdown-header">Disclaimer ⚖️</h6>
-                    <a class="dropdown-item" href="#"><i class="fas fa-gavel"></i> Aviso Legal</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-file-contract"></i> Términos de uso</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-user-secret"></i> Privacidad y Cookies</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-shield-alt"></i> Seguridad</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-exclamation-triangle"></i> Descargo Responsabilidad</a>
-                </div>
-                <div class="column full-width">
-                    <a class="dropdown-item" href="#"><i class="fas fa-envelope"></i> Contactar con ventas</a>
-                </div>
+              <div class="column">
+                <h6 class="dropdown-header">Conoce Monitor 🧩</h6>
+                <a class="dropdown-item" href="#"><i class="fas fa-bullhorn"></i> Comunicados</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-bullhorn"></i> Equipo</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-history"></i> Historia</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-bullhorn"></i> Tecnologías</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-briefcase"></i> Casos Reales</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-handshake"></i> Partners</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-life-ring"></i> Soporte</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-life-ring"></i> Contacto</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-life-ring"></i> Atención al cliente</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-life-ring"></i> Reportar un error</a>
+
+              </div>
+              <div class="column">
+                <h6 class="dropdown-header">Planes y Precios 💵</h6>
+                <a class="dropdown-item" href="#"><i class="fas fa-user-graduate"></i> Plan Estudiante</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-briefcase"></i> Plan Profesional</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-building"></i> Plan Agencia</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-suitcase"></i> Plan Corporate</a>
+
+                <h6 class="dropdown-header">Clientes 👥</h6>
+                <a class="dropdown-item" href="#"><i class="fas fa-user-graduate"></i> Estudiantes</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-user-tie"></i> Profesionales / PYMES</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-handshake"></i> Agencias</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-building"></i> Corporativos</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-university"></i> Admon. Pública</a>
+              </div>
+              <div class="column">
+                <h6 class="dropdown-header">Recursos 📚</h6>
+                <a class="dropdown-item" href="#"><i class="fas fa-blog"></i> Blog</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-book-open"></i> Guías</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-book"></i> Nomenclatura</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-info-circle"></i> Centro de Ayuda</a>
+
+                <h6 class="dropdown-header">Disclaimer ⚖️</h6>
+                <a class="dropdown-item" href="#"><i class="fas fa-gavel"></i> Aviso Legal</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-file-contract"></i> Términos de uso</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-user-secret"></i> Privacidad y Cookies</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-shield-alt"></i> Seguridad</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-exclamation-triangle"></i> Descargo
+                  Responsabilidad</a>
+              </div>
+              <div class="column full-width">
+                <a class="dropdown-item" href="#"><i class="fas fa-envelope"></i> Contactar con ventas</a>
+              </div>
             </div>
-        </ul>
+          </ul>
         </li>
 
 
@@ -236,35 +243,36 @@
           </ul>
         </li>
 
-    
+
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="securityComplianceDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              📊 Informes
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="securityComplianceDropdown">
-                <div class="dropdown-menu-columns">
-                    <div class="column">
-                      <h6 class="dropdown-header">Técnicos 🧪</h6>
-                      <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Salud del Dominio</a>
-                      <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Reputación email</a>
-                      <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Auditoria Seguridad</a>
-                      <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Problemas de Rastreo</a>
-                      
-                    </div>
-                    <div class="column">
-                      <h6 class="dropdown-header">Marketing 📊</h6>
-                      <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Auditoria SEO</a>
-                      <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Posicionamiento</a>
-                      <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Competencia</a>   
-                    </div>
-                    <div class="column">
-                      <h6 class="dropdown-header">Comerciales 📈</h6>
-                     
-                    </div>
-                    
-                </div>
-            </ul>
-        </li> 
+          <a class="nav-link dropdown-toggle" href="#" id="securityComplianceDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            📊 Informes
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="securityComplianceDropdown">
+            <div class="dropdown-menu-columns">
+              <div class="column">
+                <h6 class="dropdown-header">Técnicos 🧪</h6>
+                <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Salud del Dominio</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Reputación email</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Auditoria Seguridad</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Problemas de Rastreo</a>
+
+              </div>
+              <div class="column">
+                <h6 class="dropdown-header">Marketing 📊</h6>
+                <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Auditoria SEO</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Posicionamiento</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Competencia</a>
+              </div>
+              <div class="column">
+                <h6 class="dropdown-header">Comerciales 📈</h6>
+
+              </div>
+
+            </div>
+          </ul>
+        </li>
 
 
 
@@ -288,67 +296,67 @@
       <div class="d-flex">
 
         {% if current_user.is_authenticated %}
-       
-             <span class="nav-item dropdown">
-              <a class="btn btn-outline-primary me-2 ms-1 dropdown-toggle" href="#" id="domainDnsDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                <span class="item-responsive">🌐 Mis Sitios<i class="fa-solid fa-chevron"></i></span>
-    
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                
-                <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi perfil</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Seguridad</a></li>
-    
-                {% if is_admin %}
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="{{ url_for('admin_register') }}">Añadir Usuario</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('admin_stats') }}">Estadisticas</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('configuracion') }}">Config</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="{{ url_for('activity') }}">Actividad</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('logs') }}">Accesos</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('usuarios') }}">Usuarios</a></li>
-    
-                {% endif %}
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Soporte</a></li>
-                <li><a class="dropdown-item" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
-              </ul>
-            </span>
-     
+
         <span class="nav-item dropdown">
-          <a class="btn btn-outline-primary me-2 ms-1 dropdown-toggle" href="#" id="domainDnsDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            👤 <span class="item-responsive">Hi {{ current_user.username }} <i class="fa-solid fa-chevron"></i></span>
+          <a class="btn btn-outline-primary me-2 ms-1 dropdown-toggle" href="#" id="domainDnsDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <span class="item-responsive">🌐 Mis Sitios<i class="fa-solid fa-chevron"></i></span>
 
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            
+
             <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi perfil</a></li>
             <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
             <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Seguridad</a></li>
 
             {% if is_admin %}
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="{{ url_for('admin_register') }}">Añadir Usuario</a></li>
-              <li><a class="dropdown-item" href="{{ url_for('admin_stats') }}">Estadisticas</a></li>
-              <li><a class="dropdown-item" href="{{ url_for('configuracion') }}">Config</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="{{ url_for('activity') }}">Actividad</a></li>
-              <li><a class="dropdown-item" href="{{ url_for('logs') }}">Accesos</a></li>
-              <li><a class="dropdown-item" href="{{ url_for('usuarios') }}">Usuarios</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="{{ url_for('admin_register') }}">Añadir Usuario</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('admin_stats') }}">Estadisticas</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('configuracion') }}">Config</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="{{ url_for('activity') }}">Actividad</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('logs') }}">Accesos</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('usuarios') }}">Usuarios</a></li>
+
+            {% endif %}
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Soporte</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
+          </ul>
+        </span>
+
+        <span class="nav-item dropdown">
+          <a class="btn btn-outline-primary me-2 ms-1 dropdown-toggle" href="#" id="domainDnsDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            👤 <span class="item-responsive">Hi {{ current_user.username }} <i class="fa-solid fa-chevron"></i></span>
+
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+            <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi perfil</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Seguridad</a></li>
+
+            {% if is_admin %}
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="{{ url_for('admin_register') }}">Añadir Usuario</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('admin_stats') }}">Estadisticas</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('configuracion') }}">Config</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="{{ url_for('activity') }}">Actividad</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('logs') }}">Accesos</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('usuarios') }}">Usuarios</a></li>
 
             {% endif %}
             <li>
@@ -359,54 +367,17 @@
           </ul>
         </span>
         {% else %}
-    
-            <a class="btn btn-outline-primary me-2 ms-1" href="{{ url_for('login') }}"><i class="fa-solid fa-key"></i>
-              Acceder</a>
-        
-              <a class="btn btn-outline-primary me-2 ms-1" href="{{ url_for('register') }}"><i class="fa-solid fa-crown"></i>
-                Empezar gratis</a></li>
-          {%endif%}
-<!--
+
+        <a class="btn btn-outline-primary me-2 ms-1" href="{{ url_for('login') }}"><i class="fa-solid fa-key"></i>
+          Acceder</a>
+
+        <a class="btn btn-outline-primary me-2 ms-1" href="{{ url_for('register') }}"><i class="fa-solid fa-crown"></i>
+          Empezar gratis</a></li>
+        {%endif%}
+        <!--
         <a href="#" class="btn btn-outline-primary me-2">Sign in</a>
         <a href="#" class="btn btn-primary">Start Free Trial</a> -->
       </div>
     </div>
   </div>
 </nav>
-
-
-<!-- Navbar  
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-    <div class="container-fluid">
-      <button class="btn btn-primary me-2" id="toggle-sidebar"><i class="fas fa-bars"></i></button>
-      <a class="navbar-brand me-auto" href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='logo.png') }}" alt="Logo"
-          height="30" width="130"></a>
-      <div class="nav-options">
-
-        <a class=" btn btn-outline-primary active" href="{{ url_for('dashboard') }}"><i
-            class="fas fa-tachometer-alt"></i><span class="d-lg-inline"> Dashboard</span></a>
-        <a class=" btn btn-outline-primary ms-1" href="#"><i class="fas fa-newspaper"></i><span
-            class="d-lg-inline">Novedades</span></a>
-
-        {% if current_user.is_authenticated %}
-        <a class=" btn btn-outline-primary ms-1" href="{{ url_for('index') }}"><i class="fas fa-user-plus"></i><span
-            class="d-lg-inline"> Premium</span></a>
-        {% else %}
-        <a class=" btn btn-outline-primary ms-1" href="{{ url_for('register') }}"><i class="fas fa-user-plus"></i><span
-            class="d-lg-inline"> Registrarse</span></a>
-        {% endif %}
-
-        {% if not current_user.is_authenticated %}
-        <a class="btn btn-outline-secondary ms-1" href="{{ url_for('login') }}"><i class="fa-solid fa-key"></i>
-          Login</a>
-        {% else %}
-        <a class="btn btn-outline-secondary ms-1" href="{{ url_for('logout') }}"><i class="fa-solid fa-key"></i>
-          Salir</a>
-        {% endif %}
-
-        <button class="btn btn-primary ms-1" id="dark-mode-toggle"><i class="fas fa-adjust"></i></button>
-
-      </div>
-    </div>
-  </nav>
--->
