--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -100,7 +100,7 @@
             <div class="dropdown-menu-columns">
               <div class="column">
                 <h6 class="dropdown-header">Domain Information 🔍</h6>
-                <a class="dropdown-item" href="#"><i class="fas fa-info-circle"></i> WHOIS</a>
+                <a class="dropdown-item" href="{{ url_for('whois_domain') }}"><i class="fas fa-info-circle"></i> WHOIS</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-globe"></i> Reverse Domain</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-cog"></i> CNAME</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-search"></i> IP Lookup</a>
